--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,7 @@ body {
   line-height: 28px; /* 155.556% */
   letter-spacing: 0.25px;
   background-color: transparent;
+  width: 64px;
 }
 
 .header__button-signup {
@@ -88,14 +89,207 @@ body {
   background: #00C805;
 }
 
+.main__container {
+  display: flex;
+  justify-content: space-between;
+  background-color: #C3F53C;
+  height: 654px;
+}
+
+.main__col1 {
+  margin-top: 94px;
+  margin-left: 117px;
+}
+
+.main_col1__title {
+  width: 300px;
+  color: #000;
+  font-family: Roboto;
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px; /* 130.435% */
+  letter-spacing: 1.75px;
+  margin-bottom: 31px;
+}
+
+.main_col1__subtitle {
+  width: 486px;
+  color: #000;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px; /* 150% */
+  letter-spacing: 0.24px;
+  margin-bottom: 39px;
+}
+
+.main_col1__button {
+  width: 144px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 24px;
+  background: #000;
+  color: #FFF;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 164.706% */
+  letter-spacing: 0.25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.main_col1__end {
+  display: flex;
+  -moz-column-gap: 12px;
+       column-gap: 12px;
+}
+
+.main_col1_end__col2 {
+  width: 325px;
+  flex-shrink: 0;
+  color: #000;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 155.556% */
+  letter-spacing: 0.25px;
+}
+
+.main_col2__background {
+  display: block;
+  margin-top: 13px;
+  margin-right: 119px;
+  z-index: 999;
+}
+
 @media (max-width: 1010px) {
-  .header__logo {
-    order: 1;
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    align-items: center;
   }
-  .header__menu {
-    order: 3;
+  .header__col1 {
+    display: block;
+    -moz-column-gap: 48px;
+         column-gap: 48px;
+  }
+  ul {
+    flex-wrap: wrap;
+  }
+  .header__button-login {
+    color: #000;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 155.556% */
+    letter-spacing: 0.25px;
+    background-color: transparent;
+    text-wrap: none;
+    width: 64px;
+  }
+  .header__button-signup {
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 164.706% */
+    letter-spacing: 0.25px;
+    width: 144px;
+    height: 48px;
+    flex-shrink: 0;
+    border-radius: 24px;
+    background: #00C805;
+    flex-wrap: nowrap;
+  }
+}
+@media (max-width: 529px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+    align-items: center;
+  }
+  .header__logo {
+    display: block;
+    margin: 25px auto;
+  }
+  .menu__list {
+    margin: 0 auto;
+    max-width: 100%;
   }
   .header__col2 {
-    order: 2;
+    margin-top: 25px;
+  }
+}
+@media (max-width: 500px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    height: 130px;
+    align-items: center;
+  }
+  .header__button-login {
+    color: #000;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 155.556% */
+    letter-spacing: 0.25px;
+    background-color: transparent;
+    text-wrap: none;
+    width: 64px;
+  }
+  .header__button-signup {
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 164.706% */
+    letter-spacing: 0.25px;
+    width: 144px;
+    height: 48px;
+    flex-shrink: 0;
+    border-radius: 24px;
+    background: #00C805;
+    flex-wrap: nowrap;
+  }
+}
+@media (max-width: 480px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+    align-items: center;
+  }
+}
+@media (max-width: 450px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+    align-items: center;
+  }
+}
+@media (max-width: 400px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+    align-items: center;
   }
 }/*# sourceMappingURL=style.css.map */
