--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     font-family: Roboto, sans-serif;
 }
@@ -86,13 +90,20 @@ flex-shrink: 0;
 border-radius: 24px;
 background: #00C805;
 }
+
+//main 
+
+.main__container{
+    max-height: 100%;
+}
 .main {
 }
-.main__container {
+.main__first-block {
     display: flex;
     justify-content: space-between;
     background-color: #C3F53C;
     height: 654px;
+    margin-bottom: 25px;
 }
 .main__col1 {
     margin-top: 94px;
@@ -169,13 +180,34 @@ letter-spacing: 0.25px;
     margin-top: 13px;
     margin-right: 119px;
     z-index: 999;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 //responsible 
 
+@media(max-width: 1400px){
+    .main_col2{
+        max-height: 654px;
+    }
+    .main_col2__background{
+        max-width: 70%;
+        max-height: 70%;
+        margin-left: 60px;
+        margin-top: 60px;
+    }
+    .main__first-block{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
 @media(max-width: 1010px){
     .header__container {
         display: flex;
+        max-width: 100vw;
+        margin-left: 25px;
+        margin-right: 25px;
         justify-content: space-between;
         height: 100px;
         align-items: center;
@@ -183,10 +215,12 @@ letter-spacing: 0.25px;
     .header__col1 {
         display: block;
         column-gap: 48px;
+        width: 100%;
     }
     ul{
         flex-wrap: wrap;
     }
+    
     .header__button-login {
         color: #000;
     font-family: Roboto;
@@ -215,6 +249,141 @@ letter-spacing: 0.25px;
     background: #00C805;
     flex-wrap: nowrap;
     }
+    
+    .main__col1{
+        justify-content: center;
+        margin-top: 45px;
+        margin-left: 35px;
+        margin-right: 35px;
+        text-wrap: wrap;
+    }
+    .main__col2 {
+    }
+    .main_col2 {
+    }
+    .main_col2__background {
+        display: block;
+        margin-top: 13px;
+        margin-right: 25px;
+        z-index: 999;
+        max-width: 100%;
+    max-height: 100%;
+    }
+    .main__first-block {
+        display: flex;
+        flex-direction: column;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 950px;
+        margin-bottom: 25px;
+    }
+    .main_col1__title {
+        max-width: 100%;
+        color: #000;
+    font-family: Roboto;
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px; /* 130.435% */
+    letter-spacing: 1.75px;
+    margin-bottom: 31px;
+    }
+    .main_col1__subtitle {
+        max-width: 100%;
+        color: #000;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 150% */
+    letter-spacing: 0.24px;
+    margin-bottom: 39px;
+    }
+    .main_col1__button {
+        width: 144px;
+    height: 48px;
+    flex-shrink: 0;
+    border-radius: 24px;
+    background: #000;
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 164.706% */
+    letter-spacing: 0.25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 40px;
+    }
+    .main_col1__end {
+        display: flex;
+        column-gap: 12px;
+    }
+    .main_col1_end {
+    }
+    .main_col1_end__col1 {
+    }
+    .main_col1_end__col2 {
+        width: 325px;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+    letter-spacing: 0.25px;
+    }
+}
+
+@media(max-width: 600px){
+    .main__first-block {
+        display: flex;
+        flex-direction: column;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 950px;
+    }
+    .main_col1__title {
+        width: 100%;
+        color: #000;
+    font-family: Roboto;
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px; /* 130.435% */
+    letter-spacing: 1.75px;
+    margin-bottom: 31px;
+    overflow-wrap: break-word;
+    }
+    .main_col1__subtitle {
+        width: 100%;
+        color: #000;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 150% */
+    letter-spacing: 0.24px;
+    margin-bottom: 39px;
+    overflow-wrap: break-word;
+    }
+    .main__first-block{
+        margin-bottom: 25px;
+    }
+}
+
+@media(max-width: 578px){
+    .header__container{
+        margin-bottom: 30px;
+        margin-top: 20px;
+    }
+    .main__first-block{
+        margin-bottom: 25px;
+    }
 }
 
 @media(max-width: 529px){
@@ -223,6 +392,7 @@ letter-spacing: 0.25px;
         flex-direction: column;
         height: 160px;
         align-items: center;
+        margin-bottom: 70px;
     }
     .header__logo{
         display: block;
@@ -235,6 +405,22 @@ letter-spacing: 0.25px;
     .header__col2{
         margin-top: 25px;
     }
+    .main_col2__background {
+        display: block;
+        margin-top: 13px;
+        margin-right: 119px;
+        z-index: 999;
+        max-width: 100%;
+    max-height: 100%;
+    }
+    .main__first-block {
+        display: flex;
+        justify-content: space-between;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 500px;
+        margin-bottom: 25px;
+    }
 }
 
 @media(max-width: 500px){
@@ -243,6 +429,7 @@ letter-spacing: 0.25px;
         flex-direction: column;
         height: 130px;
         align-items: center;
+        margin-bottom: 100px;
     }
     .header__button-login {
         color: #000;
@@ -272,6 +459,25 @@ letter-spacing: 0.25px;
     background: #00C805;
     flex-wrap: nowrap;
     }
+    .main_col2__background {
+        display: block;
+        margin-top: 13px;
+        margin-right: 119px;
+        z-index: 999;
+        max-width: 100%;
+    max-height: 100%;
+    }
+    .main__first-block {
+        display: flex;
+        justify-content: space-between;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 470px;
+        margin-bottom: 25px;
+    }
+    .main_col1__subtitle{
+        font-size: 20px;
+    }
 }
 
 @media(max-width: 480px){
@@ -280,6 +486,24 @@ letter-spacing: 0.25px;
         flex-direction: column;
         height: 160px;
         align-items: center;
+    }
+    .main__first-block {
+        display: flex;
+        justify-content: space-between;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 450px;
+    }
+    .main_col2__background {
+        display: block;
+        margin-top: 13px;
+        margin-right: 119px;
+        z-index: 999;
+        max-width: 100%;
+    max-height: 100%;
+    }
+    .main__first-block{
+        margin-bottom: 25px;
     }
 }
 
@@ -290,6 +514,39 @@ letter-spacing: 0.25px;
         height: 160px;
         align-items: center;
     }
+    .main__first-block {
+        display: flex;
+        justify-content: space-between;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 420px;
+    }
+    .main_col2__background {
+        display: block;
+        margin-top: 13px;
+        margin-right: 119px;
+        z-index: 999;
+        max-width: 100%;
+    max-height: 100%;
+    }
+    .main__first-block{
+        margin-bottom: 25px;
+    }
+}
+
+@media(max-width: 440px){
+    .main_col1_end__col2{
+        width: 100%;
+        overflow-wrap: break-word;
+    }
+    .main__first-block {
+        display: flex;
+        justify-content: space-between;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 370px;
+        margin-bottom: 25px;
+    }
 }
 
 @media(max-width: 400px){
@@ -298,5 +555,21 @@ letter-spacing: 0.25px;
         flex-direction: column;
         height: 160px;
         align-items: center;
+    }
+    .main__first-block {
+        display: flex;
+        justify-content: space-between;
+        background-color: #C3F53C;
+        height: 100%;
+        max-width: 370px;
+        margin-bottom: 25px;
+    }
+    .main_col2__background {
+        display: block;
+        margin-top: 13px;
+        margin-right: 119px;
+        z-index: 999;
+        max-width: 100%;
+    max-height: 100%;
     }
 }
