--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,13 @@ body {
   padding: 0 36px;
 }
 
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
 .header {
   align-items: center;
 }
@@ -39,6 +46,7 @@ body {
   display: flex;
   -moz-column-gap: 48px;
        column-gap: 48px;
+  justify-content: center;
 }
 
 .menu__item {
@@ -102,7 +110,6 @@ body {
   justify-content: space-between;
   background-color: #C3F53C;
   height: 654px;
-  margin-bottom: 25px;
 }
 
 .main__col1 {
@@ -111,7 +118,7 @@ body {
 }
 
 .main_col1__title {
-  width: 300px;
+  max-width: 300px;
   color: #000;
   font-family: Roboto;
   font-size: 46px;
@@ -123,7 +130,7 @@ body {
 }
 
 .main_col1__subtitle {
-  width: 486px;
+  max-width: 486px;
   color: #000;
   font-family: Roboto;
   font-size: 24px;
@@ -176,9 +183,40 @@ body {
   display: block;
   margin-top: 13px;
   margin-right: 119px;
-  z-index: 999;
   max-width: 100%;
-  max-height: 100%;
+  min-width: 85%;
+}
+
+.horisontal-line {
+  /* Line 3 */
+  display: block;
+  content: "";
+  max-width: 100%;
+  height: 0;
+  left: 0;
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.main__second-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 94px;
+}
+.main__second-block div {
+  display: inline;
+  color: rgb(0, 0, 0);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.25px;
+  text-align: left;
+  margin: 0 auto;
+}
+
+.bold {
+  text-decoration: underline;
 }
 
 @media (max-width: 1400px) {
@@ -264,7 +302,6 @@ body {
     background-color: #C3F53C;
     height: 100%;
     max-width: 950px;
-    margin-bottom: 25px;
   }
   .main_col1__title {
     max-width: 100%;
@@ -324,6 +361,11 @@ body {
     letter-spacing: 0.25px;
   }
 }
+@media (max-width: 840px) {
+  .main_col2__background {
+    margin-left: 0;
+  }
+}
 @media (max-width: 600px) {
   .main__first-block {
     display: flex;
@@ -359,6 +401,9 @@ body {
   .main__first-block {
     margin-bottom: 25px;
   }
+  .main_col2__background {
+    margin-left: 0;
+  }
 }
 @media (max-width: 578px) {
   .header__container {
@@ -367,6 +412,9 @@ body {
   }
   .main__first-block {
     margin-bottom: 25px;
+  }
+  .main_col2__background {
+    margin-left: 0;
   }
 }
 @media (max-width: 529px) {
@@ -393,8 +441,9 @@ body {
     margin-top: 13px;
     margin-right: 119px;
     z-index: 999;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 480px;
+    height: auto;
+    margin-left: 0;
   }
   .main__first-block {
     display: flex;
@@ -402,7 +451,6 @@ body {
     background-color: #C3F53C;
     height: 100%;
     max-width: 500px;
-    margin-bottom: 25px;
   }
 }
 @media (max-width: 500px) {
@@ -443,11 +491,12 @@ body {
   }
   .main_col2__background {
     display: block;
-    margin-top: 13px;
-    margin-right: 119px;
+    margin-top: 2px;
+    margin-right: 2px;
     z-index: 999;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 470px;
+    height: auto;
+    margin-left: 0;
   }
   .main__first-block {
     display: flex;
@@ -455,10 +504,15 @@ body {
     background-color: #C3F53C;
     height: 100%;
     max-width: 470px;
-    margin-bottom: 25px;
   }
   .main_col1__subtitle {
     font-size: 20px;
+  }
+  .main_col1_end__col2 {
+    font-size: 12px;
+  }
+  .main__second-block div {
+    font-size: 13px;
   }
 }
 @media (max-width: 480px) {
@@ -480,8 +534,9 @@ body {
     margin-top: 13px;
     margin-right: 119px;
     z-index: 999;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 430px;
+    height: auto;
+    margin-left: 0;
   }
   .main__first-block {
     margin-bottom: 25px;
@@ -506,8 +561,9 @@ body {
     margin-top: 13px;
     margin-right: 119px;
     z-index: 999;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 400px;
+    height: auto;
+    margin-left: 0;
   }
   .main__first-block {
     margin-bottom: 25px;
@@ -524,7 +580,9 @@ body {
     background-color: #C3F53C;
     height: 100%;
     max-width: 370px;
-    margin-bottom: 25px;
+  }
+  .main_col2__background {
+    margin-left: 0;
   }
 }
 @media (max-width: 400px) {
@@ -540,14 +598,17 @@ body {
     background-color: #C3F53C;
     height: 100%;
     max-width: 370px;
-    margin-bottom: 25px;
   }
   .main_col2__background {
     display: block;
     margin-top: 13px;
     margin-right: 119px;
     z-index: 999;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 320px;
+    height: auto;
+    margin-left: 0;
+  }
+  .main__second-block div {
+    font-size: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
