--- a/styles/style.scss
+++ b/styles/style.scss
@@ -219,6 +219,38 @@ margin: 0 auto;
 .bold{
     text-decoration: underline;
 }
+.main__third-block {
+    display: flex;
+}
+.third-block__col1 {
+}
+.third-block__col2 {
+    margin-left: 11px;
+}
+.third-block-col2__title {
+    color: rgb(0, 0, 0);
+font-family: Roboto;
+font-size: 45px;
+font-weight: 700;
+line-height: 60px;
+letter-spacing: 1.75px;
+text-align: left;
+margin-bottom: 26px;
+margin-top: 166px;
+}
+.third-block-col2__subtitle {
+    color: rgb(0, 0, 0);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 700;
+line-height: 28px;
+letter-spacing: 0.25px;
+text-align: left;
+img{
+    margin-left: 7px;
+}
+}
+
 
 //responsible 
 
@@ -235,6 +267,23 @@ margin: 0 auto;
     .main__first-block{
         display: flex;
         justify-content: space-between;
+    }
+}
+
+@media(max-width: 1100px){
+    .main__third-block{
+        display: flex;
+        flex-direction: column;
+    }
+    .third-block__col2{
+        margin: 0 auto;
+    }
+    .third-block-col2__title{
+        margin-top: 25px;
+    }
+    .third-block-col2__subtitle{
+        display: flex;
+        justify-content: center;
     }
 }
 
