--- a/styles/style.scss
+++ b/styles/style.scss
@@ -109,7 +109,7 @@ background: #00C805;
     display: flex;
     justify-content: space-between;
     background-color: #C3F53C;
-    height: 654px;
+    min-height: 654px;
 
 }
 .main__col1 {
@@ -186,8 +186,9 @@ letter-spacing: 0.25px;
     display: block;
     margin-top: 13px;
     margin-right: 119px;
-    max-width: 100%;
-    min-width: 85%;
+    max-width: 600px;
+    max-height: 600px;
+
 }
 
 .horisontal-line{
@@ -399,7 +400,8 @@ max-width: 395px;
 }
 .six-block-col1_button {
     /* Rectangle */
-width: 164px;
+
+    width: 164px;
 height: 28px;
 border-radius: 24px;
 background: rgb(0, 0, 0);
@@ -424,14 +426,14 @@ margin-left: 117px;
 }
 .six-block__col2 {
     z-index: 2;
-    margin-right: 117px;
+    // margin-right: 117px;
 }
 .six-block-col2__img {
     display: block;
-    max-width: 100%;
     // display: block;
     // margin-right: 117px;
-    margin-top: 84px;
+    max-width: 100%;
+    margin-top: 80px;
 }
 .six-block-col2__description {
     text-align: end;
@@ -449,9 +451,6 @@ margin-left: 117px;
     //     text-wrap: wrap;
     // }
     .six-block-col2__img{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
     }
 }
 
@@ -461,14 +460,31 @@ margin-left: 117px;
         max-height: 654px;
     }
     .main_col2__background{
-        max-width: 70%;
-        max-height: 70%;
+        max-width: 100%;
         margin-left: 60px;
         margin-top: 60px;
     }
     .main__first-block{
         display: flex;
         justify-content: space-between;
+    }
+    .main__six-block {
+        display: flex;
+        flex-direction: column;
+        height: 1400px;
+        background: rgb(240, 235, 230);
+    }
+    .six-block-col2__img {
+        display: block;
+        // display: block;
+        // margin-right: 117px;
+        max-width: 100%;
+        margin-top: 80px;
+        margin: 0 auto;
+    }
+    .six-block-col2__description {
+        text-align: center;
+        margin-right: 35px;
     }
 }
 
@@ -584,7 +600,6 @@ margin-left: 117px;
         margin-right: 25px;
         z-index: 999;
         max-width: 100%;
-    max-height: 100%;
     }
     .main__first-block {
         display: flex;
@@ -653,11 +668,71 @@ margin-left: 117px;
     line-height: 28px; /* 155.556% */
     letter-spacing: 0.25px;
     }
+    .six-block-col1__variety{
+        display: flex;
+        flex-direction: column;
+    }
+    .variety{
+        margin: 0 auto; 
+    }
+    .variety:first-child{
+        margin: 0 auto; 
+    }
+    .six-block-col1__title{
+        margin: 30px auto;
+        text-align: center;
+        font-weight: bold;
+    }
+    .six-block-col1_button{
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 35px;
+        width: 70%;
+        height: 35px;
+    }
+    .six-block-col1__description{
+        margin: 35px 30px;
+        max-width: 100%;
+        font-size: ;
+    }
 }
 
 @media(max-width: 840px){
     .main_col2__background{
         margin-left: 0;
+        max-width: 100%;
+    }
+}
+
+@media(max-width: 700px){
+    .six-block-col1__description{
+        margin: 74px 25px 35px 25px;
+        max-width: 100%;
+    }
+    .six-block-col1_button{
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 35px;
+        width: 70%;
+        height: 35px;
+    }
+    .six-block__info{
+        margin: 0 auto;
+    }
+    .six-block-col1__variety{
+        display: flex;
+        flex-direction: column;
+    }
+    .variety{
+        margin: 0 auto; 
+    }
+    .variety:first-child{
+        margin: 0 auto; 
+    }
+    .six-block-col1__title{
+        margin: 30px auto;
+        text-align: center;
+        font-weight: bold;
     }
 }
 
@@ -698,6 +773,7 @@ margin-left: 117px;
     }
     .main_col2__background{
         margin-left: 0;
+        max-width: 100%;
     }
 }
 
@@ -711,6 +787,7 @@ margin-left: 117px;
     }
     .main_col2__background{
         margin-left: 0;
+        max-width: 100%;
     }
 }
 
@@ -737,9 +814,7 @@ margin-left: 117px;
         display: block;
         margin-top: 13px;
         margin-right: 119px;
-        z-index: 999;
-        max-width: 480px;
-   height: auto;
+        max-width: 100%;
    margin-left: 0;
     }
     .main__first-block {
@@ -792,8 +867,7 @@ margin-left: 117px;
         margin-top: 2px;
         margin-right: 2px;
         z-index: 999;
-        max-width: 470px;
-   height: auto;
+        max-width: 100%;
    margin-left: 0;
     }
     .main__first-block {
@@ -835,8 +909,7 @@ margin-left: 117px;
         margin-top: 13px;
         margin-right: 119px;
         z-index: 999;
-        max-width: 430px;
-   height: auto;
+        max-width: 100%;
    margin-left: 0;
     }
     .main__first-block{
@@ -863,8 +936,7 @@ margin-left: 117px;
         margin-top: 13px;
         margin-right: 119px;
         z-index: 999;
-        max-width: 400px;
-   height: auto;
+        max-width: 100%;
    margin-left: 0;
     }
     .main__first-block{
@@ -886,6 +958,7 @@ margin-left: 117px;
     }
     .main_col2__background{
         margin-left: 0;
+        max-width: 100%;
     }
 }
 
@@ -908,8 +981,7 @@ margin-left: 117px;
         margin-top: 13px;
         margin-right: 119px;
         z-index: 999;
-        max-width: 320px;
-   height: auto;
+        max-width: 100%;
    margin-left: 0;
     }
     .main__second-block{
