completed the first version of the site

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -440,6 +440,159 @@ margin-left: 117px;
     margin-right: 35px;
 }
 
+.footer {
+}
+.footer__container {
+    
+}
+.footer__cover{
+    background-color: #000;
+}
+.footer__cols {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 54px;
+}
+.footer-col1 {
+    display: grid;
+    grid-template-columns: 186px 186px 186px;
+    margin-left: 117px;
+}
+.footer-col1__col {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    div{
+        color: rgb(255, 255, 255);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.25px;
+text-align: left;
+    }
+}
+.footer-col2 {
+    margin-right: 117px;
+}
+.footer-col2__icon {
+    display: block;
+    margin-bottom: 22px;
+}
+.footer-col2__description {
+    color: rgb(121, 133, 139);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.25px;
+text-align: left;
+max-width: 470px;
+margin-bottom: 10px;
+}
+.footer-col2__input-block {
+    /* Rectangle */
+    content: "";
+width: 492px;
+height: 64px;
+left: 0%;
+right: 0%;
+top: 0;
+bottom: 0;
+border-radius: 32px;
+background: rgb(30, 33, 36);
+display: flex;
+justify-content: space-between;
+margin-bottom: 27px;
+}
+.footer__input {
+    position: relative;
+    display: block;
+    border: 0;
+    background: none;
+    color: rgba(255, 255, 255, 0.5);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.25px;
+margin-left: 37px;
+height: 28px;
+margin: auto 0;
+left: 37px;
+}
+.input__button {
+    display: block;
+    position: relative;
+    width: 155px;
+height: 28px;
+border-radius: 24px;
+color: rgb(0, 0, 0);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 700;
+line-height: 28px;
+letter-spacing: 0.25px;
+text-align: center;
+background: rgb(0, 200, 5);
+margin: auto 0;
+right: 12px;
+}
+.footer-col2__summary {
+    color: rgb(255, 255, 255);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.25px;
+text-align: left;
+text-align: end;
+margin-bottom: 36px;
+display: flex;
+flex-direction: column;
+row-gap: 8px;
+}
+.horisontal-line {
+}
+.footer__rights {
+    color: rgb(255, 255, 255);
+font-family: Roboto;
+font-size: 15px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.1px;
+text-align: left;
+max-width: 1160px;
+margin-left: 117px;
+}
+.footer__end {
+    color: rgb(121, 133, 139);
+font-family: Roboto;
+font-size: 18px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.25px;
+text-align: left;
+margin-left: 117px;
+margin-top: 35px;
+padding-bottom: 250px;
+    img{
+        display: inline-block;
+        width: 25.67px;
+height: 25.67px;
+    }
+    .green{
+    }
+}
+    .hrr{
+        display: none;
+        content: "";
+        max-width: 100%;
+        height: 2px;
+        margin: 0 15px 0 15px;
+        background-color: white;
+    }
+
 //responsible 
 
 @media(max-width: 1450px){
@@ -451,6 +604,8 @@ margin-left: 117px;
     //     text-wrap: wrap;
     // }
     .six-block-col2__img{
+    }
+    .footer-col2{
     }
 }
 
@@ -484,7 +639,114 @@ margin-left: 117px;
     }
     .six-block-col2__description {
         text-align: center;
-        margin-right: 35px;
+    }
+    .footer__cols{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-col1{
+        justify-content: center;
+    }
+    .footer-col2{
+        margin: 0;
+    }
+    .footer-col2{
+        div{
+            text-align: center;
+        }
+    }
+    .footer-col2 {
+        margin: 0;
+    }
+    .footer-col2__icon {
+        display: block;
+        margin: 25px auto;
+    }
+    .footer-col2__description {
+        color: rgb(121, 133, 139);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    max-width: 470px;
+    margin-bottom: 10px;
+    margin: 25px auto;
+    }
+    .footer-col2__input-block {
+        margin: 0 auto;
+        /* Rectangle */
+        content: "";
+    width: 492px;
+    height: 64px;
+    left: 0%;
+    right: 0%;
+    top: 0;
+    bottom: 0;
+    border-radius: 32px;
+    background: rgb(30, 33, 36);
+    display: flex;
+    margin-bottom: 27px;
+    }
+    .footer__input {
+        position: relative;
+        display: block;
+        border: 0;
+        background: none;
+        color: rgba(255, 255, 255, 0.5);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.25px;
+    margin-left: 37px;
+    height: 28px;
+    margin: auto 0;
+    left: 37px;
+    }
+    .input__button {
+        display: flex;
+        position: relative;
+        width: 155px;
+    height: 28px;
+    border-radius: 24px;
+    color: rgb(0, 0, 0);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0.25px;
+    text-align: center;
+    background: rgb(0, 200, 5);
+    justify-content: center;
+    right: 12px;
+    }
+    .footer-col2__summary {
+        display: flex;
+        justify-content: center;
+        color: rgb(255, 255, 255);
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    text-align: end;
+    margin-bottom: 36px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+    }
+    .footer__rights{
+        margin-left: 25px;
+        margin-right: 25px;
+        max-width: 100%;
+    }
+    .footer__end{
+        margin: 0;
+        margin-left: 25px;
+        margin-top: 25px;
     }
 }
 
@@ -694,6 +956,9 @@ margin-left: 117px;
         margin: 35px 30px;
         max-width: 100%;
     }
+    .main__six-block{
+        height: 1200px;
+    }
 }
 
 @media(max-width: 840px){
@@ -735,6 +1000,53 @@ margin-left: 117px;
     }
 }
 
+@media(max-width: 620px){
+    .footer-col2__input-block {
+        /* Rectangle */
+        content: "";
+    width: 300px;
+    height: 44px;
+    border-radius: 32px;
+    background: rgb(30, 33, 36);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 27px;
+    }
+    .footer__input {
+        position: relative;
+        display: block;
+        border: 0;
+        background: none;
+        color: rgba(255, 255, 255, 0.5);
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.25px;
+    margin-left: 37px;
+    height: 28px;
+    margin: auto 0;
+    left: 17px;
+    }
+    .input__button {
+        display: block;
+        position: relative;
+        width: 70px;
+    height: 30px;
+    border-radius: 24px;
+    color: rgb(0, 0, 0);
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0.25px;
+    text-align: center;
+    background: rgb(0, 200, 5);
+    margin: auto 0;
+    right: 12px;
+    }
+}
+
 @media(max-width: 600px){
     .main__first-block {
         display: flex;
@@ -773,6 +1085,21 @@ margin-left: 117px;
     .main_col2__background{
         margin-left: 0;
         max-width: 100%;
+    }
+    .footer-col1{
+        display: flex;
+        flex-direction: column;
+        row-gap: 35px;
+    }
+    .footer-col2__description{
+        margin: 0 20px 0 20px;
+    }
+    .footer-col1{
+        margin-left: 35px;
+        margin-right: 35px;
+    }
+    .hrr{
+        display: block;
     }
 }
 
@@ -887,6 +1214,9 @@ margin-left: 117px;
     font-size: 13px;
         }
     }
+    .main__six-block{
+        height: 1070px;
+    }
 }
 
 @media(max-width: 480px){
@@ -958,6 +1288,9 @@ margin-left: 117px;
     .main_col2__background{
         margin-left: 0;
         max-width: 100%;
+    }
+    .main__six-block{
+        height: 1030px;
     }
 }
 
